Only get the analysis from the user service and not the whole user data
