# users/openapi.json
@@ -63,6 +63,37 @@
       }
     },
     "/users/{id}/analysis": {
+      "get": {
+        "tags": [
+          "user-controller"
+        ],
+        "operationId": "getUserAnalysis",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Analysis"
+                  }
+                }
+              }
+            }
+          }
+        }
+      },
       "post": {
         "tags": [
           "user-controller"
